pkg/java/src/main/generated/dev/openfga/language/OpenFGAParser.java
// Generated from /app/OpenFGAParser.g4 by ANTLR 4.13.1
package dev.openfga.language;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OpenFGAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, COMMA=2, LESS=3, GREATER=4, LBRACKET=5, RBRACKET=6, LPAREN=7, 
		RPAREN=8, WHITESPACE=9, IDENTIFIER=10, HASH=11, AND=12, OR=13, BUT_NOT=14, 
		FROM=15, MODEL=16, SCHEMA=17, SCHEMA_VERSION=18, TYPE=19, CONDITION=20, 
		RELATIONS=21, DEFINE=22, KEYWORD_WITH=23, EQUALS=24, NOT_EQUALS=25, IN=26, 
		LESS_EQUALS=27, GREATER_EQUALS=28, LOGICAL_AND=29, LOGICAL_OR=30, RPRACKET=31, 
		LBRACE=32, RBRACE=33, DOT=34, MINUS=35, EXCLAM=36, QUESTIONMARK=37, PLUS=38, 
		STAR=39, SLASH=40, PERCENT=41, CEL_TRUE=42, CEL_FALSE=43, NUL=44, CEL_COMMENT=45, 
		NUM_FLOAT=46, NUM_INT=47, NUM_UINT=48, STRING=49, BYTES=50, NEWLINE=51, 
		CONDITION_PARAM_CONTAINER=52, CONDITION_PARAM_TYPE=53;
	public static final int
		RULE_main = 0, RULE_modelHeader = 1, RULE_typeDefs = 2, RULE_typeDef = 3, 
		RULE_relationDeclaration = 4, RULE_relationName = 5, RULE_relationDef = 6, 
		RULE_relationDefNoDirect = 7, RULE_relationDefPartials = 8, RULE_relationDefGrouping = 9, 
		RULE_relationRecurse = 10, RULE_relationRecurseNoDirect = 11, RULE_relationDefDirectAssignment = 12, 
		RULE_relationDefRewrite = 13, RULE_relationDefTypeRestriction = 14, RULE_relationDefTypeRestrictionBase = 15, 
		RULE_conditions = 16, RULE_condition = 17, RULE_conditionName = 18, RULE_conditionParameter = 19, 
		RULE_parameterName = 20, RULE_parameterType = 21, RULE_multiLineComment = 22, 
		RULE_conditionExpression = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "modelHeader", "typeDefs", "typeDef", "relationDeclaration", 
			"relationName", "relationDef", "relationDefNoDirect", "relationDefPartials", 
			"relationDefGrouping", "relationRecurse", "relationRecurseNoDirect", 
			"relationDefDirectAssignment", "relationDefRewrite", "relationDefTypeRestriction", 
			"relationDefTypeRestrictionBase", "conditions", "condition", "conditionName", 
			"conditionParameter", "parameterName", "parameterType", "multiLineComment", 
			"conditionExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'<'", "'>'", "'['", null, "'('", "')'", null, null, 
			"'#'", "'and'", "'or'", "'but not'", "'from'", "'model'", "'schema'", 
			"'1.1'", "'type'", "'condition'", "'relations'", "'define'", "'with'", 
			"'=='", "'!='", "'in'", "'<='", "'>='", "'&&'", "'||'", "']'", "'{'", 
			"'}'", "'.'", "'-'", "'!'", "'?'", "'+'", "'*'", "'/'", "'%'", "'true'", 
			"'false'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "COMMA", "LESS", "GREATER", "LBRACKET", "RBRACKET", "LPAREN", 
			"RPAREN", "WHITESPACE", "IDENTIFIER", "HASH", "AND", "OR", "BUT_NOT", 
			"FROM", "MODEL", "SCHEMA", "SCHEMA_VERSION", "TYPE", "CONDITION", "RELATIONS", 
			"DEFINE", "KEYWORD_WITH", "EQUALS", "NOT_EQUALS", "IN", "LESS_EQUALS", 
			"GREATER_EQUALS", "LOGICAL_AND", "LOGICAL_OR", "RPRACKET", "LBRACE", 
			"RBRACE", "DOT", "MINUS", "EXCLAM", "QUESTIONMARK", "PLUS", "STAR", "SLASH", 
			"PERCENT", "CEL_TRUE", "CEL_FALSE", "NUL", "CEL_COMMENT", "NUM_FLOAT", 
			"NUM_INT", "NUM_UINT", "STRING", "BYTES", "NEWLINE", "CONDITION_PARAM_CONTAINER", 
			"CONDITION_PARAM_TYPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OpenFGAParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OpenFGAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public ModelHeaderContext modelHeader() {
			return getRuleContext(ModelHeaderContext.class,0);
		}
		public TypeDefsContext typeDefs() {
			return getRuleContext(TypeDefsContext.class,0);
		}
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(OpenFGAParser.EOF, 0); }
		public TerminalNode WHITESPACE() { return getToken(OpenFGAParser.WHITESPACE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(OpenFGAParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(OpenFGAParser.NEWLINE, i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(48);
				match(WHITESPACE);
				}
			}

			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(51);
				match(NEWLINE);
				}
			}

			setState(54);
			modelHeader();
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(55);
				match(NEWLINE);
				}
				break;
			}
			setState(58);
			typeDefs();
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(59);
				match(NEWLINE);
				}
				break;
			}
			setState(62);
			conditions();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(63);
				match(NEWLINE);
				}
			}

			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModelHeaderContext extends ParserRuleContext {
		public Token schemaVersion;
		public TerminalNode MODEL() { return getToken(OpenFGAParser.MODEL, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(OpenFGAParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(OpenFGAParser.NEWLINE, i);
		}
		public TerminalNode SCHEMA() { return getToken(OpenFGAParser.SCHEMA, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(OpenFGAParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(OpenFGAParser.WHITESPACE, i);
		}
		public TerminalNode SCHEMA_VERSION() { return getToken(OpenFGAParser.SCHEMA_VERSION, 0); }
		public MultiLineCommentContext multiLineComment() {
			return getRuleContext(MultiLineCommentContext.class,0);
		}
		public ModelHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterModelHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitModelHeader(this);
		}
	}

	public final ModelHeaderContext modelHeader() throws RecognitionException {
		ModelHeaderContext _localctx = new ModelHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_modelHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HASH) {
				{
				setState(68);
				multiLineComment();
				setState(69);
				match(NEWLINE);
				}
			}

			setState(73);
			match(MODEL);
			setState(74);
			match(NEWLINE);
			setState(75);
			match(SCHEMA);
			setState(76);
			match(WHITESPACE);
			setState(77);
			((ModelHeaderContext)_localctx).schemaVersion = match(SCHEMA_VERSION);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(78);
				match(WHITESPACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefsContext extends ParserRuleContext {
		public List<TypeDefContext> typeDef() {
			return getRuleContexts(TypeDefContext.class);
		}
		public TypeDefContext typeDef(int i) {
			return getRuleContext(TypeDefContext.class,i);
		}
		public TypeDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterTypeDefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitTypeDefs(this);
		}
	}

	public final TypeDefsContext typeDefs() throws RecognitionException {
		TypeDefsContext _localctx = new TypeDefsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDefs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					typeDef();
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefContext extends ParserRuleContext {
		public Token typeName;
		public List<TerminalNode> NEWLINE() { return getTokens(OpenFGAParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(OpenFGAParser.NEWLINE, i);
		}
		public TerminalNode TYPE() { return getToken(OpenFGAParser.TYPE, 0); }
		public TerminalNode WHITESPACE() { return getToken(OpenFGAParser.WHITESPACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(OpenFGAParser.IDENTIFIER, 0); }
		public MultiLineCommentContext multiLineComment() {
			return getRuleContext(MultiLineCommentContext.class,0);
		}
		public TerminalNode RELATIONS() { return getToken(OpenFGAParser.RELATIONS, 0); }
		public List<RelationDeclarationContext> relationDeclaration() {
			return getRuleContexts(RelationDeclarationContext.class);
		}
		public RelationDeclarationContext relationDeclaration(int i) {
			return getRuleContext(RelationDeclarationContext.class,i);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitTypeDef(this);
		}
	}

	public final TypeDefContext typeDef() throws RecognitionException {
		TypeDefContext _localctx = new TypeDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(87);
				match(NEWLINE);
				setState(88);
				multiLineComment();
				}
				break;
			}
			setState(91);
			match(NEWLINE);
			setState(92);
			match(TYPE);
			setState(93);
			match(WHITESPACE);
			setState(94);
			((TypeDefContext)_localctx).typeName = match(IDENTIFIER);
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(95);
				match(NEWLINE);
				setState(96);
				match(RELATIONS);
				setState(98); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(97);
						relationDeclaration();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(100); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(OpenFGAParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(OpenFGAParser.NEWLINE, i);
		}
		public TerminalNode DEFINE() { return getToken(OpenFGAParser.DEFINE, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(OpenFGAParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(OpenFGAParser.WHITESPACE, i);
		}
		public RelationNameContext relationName() {
			return getRuleContext(RelationNameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(OpenFGAParser.COLON, 0); }
		public RelationDefContext relationDef() {
			return getRuleContext(RelationDefContext.class,0);
		}
		public MultiLineCommentContext multiLineComment() {
			return getRuleContext(MultiLineCommentContext.class,0);
		}
		public RelationDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterRelationDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitRelationDeclaration(this);
		}
	}

	public final RelationDeclarationContext relationDeclaration() throws RecognitionException {
		RelationDeclarationContext _localctx = new RelationDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relationDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(104);
				match(NEWLINE);
				setState(105);
				multiLineComment();
				}
				break;
			}
			setState(108);
			match(NEWLINE);
			setState(109);
			match(DEFINE);
			setState(110);
			match(WHITESPACE);
			setState(111);
			relationName();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(112);
				match(WHITESPACE);
				}
			}

			setState(115);
			match(COLON);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(116);
				match(WHITESPACE);
				}
			}

			{
			setState(119);
			relationDef();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(OpenFGAParser.IDENTIFIER, 0); }
		public RelationNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterRelationName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitRelationName(this);
		}
	}

	public final RelationNameContext relationName() throws RecognitionException {
		RelationNameContext _localctx = new RelationNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_relationName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationDefContext extends ParserRuleContext {
		public RelationDefDirectAssignmentContext relationDefDirectAssignment() {
			return getRuleContext(RelationDefDirectAssignmentContext.class,0);
		}
		public RelationDefGroupingContext relationDefGrouping() {
			return getRuleContext(RelationDefGroupingContext.class,0);
		}
		public RelationRecurseContext relationRecurse() {
			return getRuleContext(RelationRecurseContext.class,0);
		}
		public RelationDefPartialsContext relationDefPartials() {
			return getRuleContext(RelationDefPartialsContext.class,0);
		}
		public RelationDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterRelationDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitRelationDef(this);
		}
	}

	public final RelationDefContext relationDef() throws RecognitionException {
		RelationDefContext _localctx = new RelationDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_relationDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACKET:
				{
				setState(123);
				relationDefDirectAssignment();
				}
				break;
			case IDENTIFIER:
				{
				setState(124);
				relationDefGrouping();
				}
				break;
			case LPAREN:
				{
				setState(125);
				relationRecurse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(128);
				relationDefPartials();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationDefNoDirectContext extends ParserRuleContext {
		public RelationDefGroupingContext relationDefGrouping() {
			return getRuleContext(RelationDefGroupingContext.class,0);
		}
		public RelationRecurseNoDirectContext relationRecurseNoDirect() {
			return getRuleContext(RelationRecurseNoDirectContext.class,0);
		}
		public RelationDefPartialsContext relationDefPartials() {
			return getRuleContext(RelationDefPartialsContext.class,0);
		}
		public RelationDefNoDirectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationDefNoDirect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterRelationDefNoDirect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitRelationDefNoDirect(this);
		}
	}

	public final RelationDefNoDirectContext relationDefNoDirect() throws RecognitionException {
		RelationDefNoDirectContext _localctx = new RelationDefNoDirectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_relationDefNoDirect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(131);
				relationDefGrouping();
				}
				break;
			case LPAREN:
				{
				setState(132);
				relationRecurseNoDirect();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(135);
				relationDefPartials();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationDefPartialsContext extends ParserRuleContext {
		public List<TerminalNode> WHITESPACE() { return getTokens(OpenFGAParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(OpenFGAParser.WHITESPACE, i);
		}
		public List<TerminalNode> OR() { return getTokens(OpenFGAParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(OpenFGAParser.OR, i);
		}
		public List<RelationDefGroupingContext> relationDefGrouping() {
			return getRuleContexts(RelationDefGroupingContext.class);
		}
		public RelationDefGroupingContext relationDefGrouping(int i) {
			return getRuleContext(RelationDefGroupingContext.class,i);
		}
		public List<RelationRecurseNoDirectContext> relationRecurseNoDirect() {
			return getRuleContexts(RelationRecurseNoDirectContext.class);
		}
		public RelationRecurseNoDirectContext relationRecurseNoDirect(int i) {
			return getRuleContext(RelationRecurseNoDirectContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(OpenFGAParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(OpenFGAParser.AND, i);
		}
		public TerminalNode BUT_NOT() { return getToken(OpenFGAParser.BUT_NOT, 0); }
		public RelationDefPartialsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationDefPartials; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).enterRelationDefPartials(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFGAParserListener ) ((OpenFGAParserListener)listener).exitRelationDefPartials(this);
		}
	}
